Bug 259332: Improve support for document.all such that we can deal with multiple elements with the same id and/or name. r/sr=jst